# mondialrelay

./: Cargo.toml  README.md  rust-toolchain.toml  typos.toml
.github/workflows/: rust.yml
api/: Cargo.toml  NOTES.md  ROADMAP.md  TODO.md  rust-toolchain.toml
api/config/: config.toml
api/migrations/mondialrelay/: up.sql
api/src/: config.rs  error.rs  handler.rs  lib.rs  main.rs  request.rs  response.rs
api/src/db/: migration.rs  model.rs  schema.rs
api/tests/: create_shipment.rs
client/: Cargo.toml  README.md
common/: Cargo.toml
