cargo-features = ["profile-rustflags", "codegen-backend", "edition2024"]
[workspace]
resolver = "2"
members = [
    "api",
    "common",
    "client"
]
[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
incremental = false
strip = "symbols"
rustflags = ["-Zlocation-detail=none"]

[profile.dev]
# can induce issue when using rust-analyzer, but allows smaller dev build time
# codegen-backend = "cranelift"
