cargo-features = ["profile-rustflags", "codegen-backend", "edition2024"]
[package]
name = "mondialrelay-api"
version = "0.1.0"
edition = "2024"
[lib]
name = "mondialrelay_api_lib"
path = "src/lib.rs"

[[bin]]
name = "mondialrelay-api-server"
path = "src/main.rs"



[dependencies]
# Clients API
reqwest = {version="0.12", default-features=false}
## XML
yaserde = {version="0.12", features=["derive"]}
xsd-macro-utils = {git="https://github.com/Cyrix126/xsd-parser-rs"}
xsd-parser = {git="https://github.com/Cyrix126/xsd-parser-rs"}
xsd-types = {git="https://github.com/Cyrix126/xsd-parser-rs"}
xml = "0.8"
xmltree = "0.11"
# configuration file
get_pass = {git = "https://github.com/Cyrix126/get_pass"}
confy = "0.6"
serde = { version = "1", features = ["derive"] }
url = {version="2.5", features=["serde"]}
# Server
tokio = {version="1", default-features=false, features= ["rt-multi-thread", "sync"] }
axum = {version="0.7", default-features= false, features= ["tokio", "http2", "json", "macros"] }
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Error
thiserror = "2.0"
axum_thiserror = "0.1"
anyhow = "1.0"
# response, either json (slower, more compatible) or bitcode (faster, rust client needed)
# bitcode = {version="0.6", features=["serde"]}
# Miscs

# DB
diesel = { version = "2.2", features = ["postgres", "chrono"] }
dotenv = "0.15"
diesel_migrations = {version="2.2", features=["postgres"]}
deadpool-diesel = {version="0.6", features=["postgres"]}
chrono = "0.4"
[dev-dependencies]
axum-test = "16.3"

[features]
default=[]
[package.metadata.cargo-machete]
ignored = ["xml", "xsd-types"]
